Fixed collapsing production boxes

--- a/Checkflix/Checkflix/ClientApp/src/app/home/home.component.css
+++ b/Checkflix/Checkflix/ClientApp/src/app/home/home.component.css
@@ -104,3 +104,9 @@ th.mat-header-cell {
   overflow: hidden;
   outline:none;
 }
+.default-wdh{
+  max-width: 100%;
+}
+
+
+
